[package]
name = "uac"
version = "0.0.0"
authors = ["Nabla"]
edition = "2021"
description = "A command to run a program as administrator in Windows"
readme = "README.md"
repository = "https://gitlab.com/anynabla/uac"
license = "MIT"

[dependencies]
indoc = "1.0.7"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]
