[package]
name = "uac"
version = "0.1.0"
authors = ["Nabla"]
edition = "2021"
description = "A command to run a program as administrator in Windows"
readme = "README.md"
repository = "https://gitlab.com/anynabla/uac"
license = "MIT"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[dependencies.defer]
git = "https://gitlab.com/anynabla/defer"
tag = "0.1.0"

[dependencies.text]
git = "https://gitlab.com/anynabla/text"
tag = "0.1.0"
